docs: update setup instructions and minor tweaks in README